Authors doc imrpoved
